# swarmROS2

./: README.md  plot.py  plot_metrics.py  swarm_log_20260419_041230.json
assets/demos/: movingbotsrviz.webm
install/: local_setup.sh  setup.sh
log/: latest_build
ros2WS1/install/: local_setup.sh  setup.sh
ros2WS1/log/: latest_build
ros2WS1/src/bot/: setup.py
ros2WS2/install/: local_setup.sh  setup.sh
ros2WS2/log/: latest_build
ros2WS2/src/collector_bot/: package.xml
ros2WS3/install/: local_setup.sh  setup.sh
ros2WS3/log/: latest_build
ros2WS3/src/collector_bot/: package.xml  setup.cfg  setup.py
ros2WS4/RL/: requirements.txt
ros2WS4/RL/training/: config.py  train.py
ros2WS4/logs/run_20260417_224741/: training_summary.json
ros2WS4/logs/run_20260417_225854/: training_summary.json
ros2WS4/logs/run_20260417_230156/: training_summary.json
ros2WS4/logs/run_20260417_231428/: training_summary.json
ros2WS4/logs/run_20260417_231708/: training_summary.json
ros2WS4/logs/run_20260417_232919/: training_summary.json
ros2WS4/logs/run_20260417_233149/: training_summary.json
ros2WS4/logs/run_20260417_233507/: training_summary.json
ros2WS4/logs/run_20260417_235017/: training_summary.json
ros2WS4/logs/run_20260417_235243/: training_summary.json
ros2WS4/logs/run_20260417_235505/: training_summary.json
ros2WS4/simulate/log1/: metrics.json  report.html
src/swarm_description/: CMakeLists.txt
src/swarm_nav/: package.xml  setup.cfg  setup.py
ws/ros2WS1/src/bot/: package.xml
ws/ros2WS1/src/bot/worlds/: circle.world
ws/ros2WS5/: README.md
(+157 files in other folders)
