<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bot</name>
  <version>0.1.0</version>
  <description>Multi-robot swarm with LiDAR obstacle avoidance in Gazebo</description>
  <maintainer email="akshatidk29@todo.todo">akshatidk29</maintainer>
  <license>MIT</license>

  <!-- Build / runtime -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Simulation -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>

  <!-- Robot model -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <!-- Teleop -->
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <!-- TF -->
  <exec_depend>tf2_ros</exec_depend>

  <!-- Test -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
